Fixed date shift

--- a/style.v2.css
+++ b/style.v2.css
@@ -9,7 +9,7 @@
   font-size: 16px;
   line-height: 1.2em;
   margin: 1em auto 4em auto;
-  max-width: 720px;
+  max-width: 722px;
   padding: 0 18px;
   position: relative;
 }
@@ -85,7 +85,7 @@ body > p,
 body > ul,
 body > aside,
 body > blockquote {
-  max-width: 720px;
+  max-width: 722px;
 }
 
 body > p.figure {
